# mc-mvp

devices/: README.md  compose.yml  pyproject.toml
devices/common/: messages.proto  messages_pb2.py  messages_pb2.pyi
devices/gateway/: Dockerfile  gateway.py  gw1.env  gw2.env
devices/tracker/: Dockerfile  tracker.py
infra/: README.md  base.yml  compose.yml
infra/conf/vmagent_conf/: prometheus_server.yml
infra/conf/vmalert_rules/: alerts-health.yml
infra/services/grafana/: compose.yml
infra/services/nats/: compose.yml
infra/services/postgresql/: compose.yml
infra/services/victoria/: compose.yml
